Function to add county values - bug: county names are invisible

--- a/data-viz/solar-forecasting/src/components/SolarGraphPage.css
+++ b/data-viz/solar-forecasting/src/components/SolarGraphPage.css
@@ -93,8 +93,8 @@
 
 }
 
-.dropdown {
-  /*just messin around with some css, we need to make the dropdowns look nice (with no css btw, mac makes it look p good)*/
+/*.dropdown {
+  just messin around with some css, we need to make the dropdowns look nice (with no css btw, mac makes it look p good)
   background: orange;
   color: black;
-}
+}*/
